# shopmesh

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  lint.yml
deploy/docker/: auth.Dockerfile  cart.Dockerfile  catalog.Dockerfile  gateway.Dockerfile  inventory.Dockerfile  notification.Dockerfile  order.Dockerfile  payment.Dockerfile  user.Dockerfile
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: api-contracts.md  architecture.md  erd.md  events.md  roadmap.md
scripts/: bootstrap.sh  format.sh  run-dev.sh  smoke_test.py
services/auth-service/: .env.example  (+1 more)
services/catalog-service/: .env.example  pyproject.toml
services/catalog-service/alembic/: README  env.py
services/catalog-service/alembic/versions/: 0001_catalog_init.py
services/catalog-service/app/: main.py
services/catalog-service/app/api/v1/: router.py
services/catalog-service/app/core/: config.py  security.py
services/catalog-service/app/models/: __init__.py  catalog.py
services/catalog-service/app/repositories/: catalog.py
services/catalog-service/app/schemas/: catalog.py  resource.py
services/catalog-service/app/services/: catalog.py
services/catalog-service/tests/: test_catalog.py  test_health.py
services/inventory-service/: .env.example  pyproject.toml
services/inventory-service/alembic/: env.py  script.py.mako
services/inventory-service/alembic/versions/: 0001_create_inventory_items.py
services/inventory-service/app/: main.py
services/inventory-service/app/api/: deps.py
services/inventory-service/app/api/v1/: router.py
services/inventory-service/app/core/: config.py  security.py
services/inventory-service/app/db/: session.py
services/inventory-service/app/models/: __init__.py  inventory.py
services/inventory-service/app/repositories/: inventory.py
services/inventory-service/app/schemas/: inventory.py  resource.py
services/inventory-service/app/services/: inventory.py
services/inventory-service/tests/: test_health.py  test_inventory.py
(+129 files in other folders)
