[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-service"
version = "1.0.0"
description = "ShopMesh service: catalog-service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "alembic>=1.13.2,<2.0.0",
    "psycopg[binary]>=3.2.1,<4.0.0",
    "redis>=5.0.8,<6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "ruff>=0.6.2,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
